--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-clean-order"],
-  "plugins": ["stylelint-order"],
-  "rules": {
-    "no-empty-source": null,
-    "declaration-empty-line-before": null,
-    "no-missing-end-of-source-newline": null,
-    "selector-class-pattern": null,
-    "keyframes-name-pattern": null
-  }
+  "extends": ["@gravity-ui/stylelint-config", "@gravity-ui/stylelint-config/order"]
 }
