--- a/package.json
+++ b/package.json
@@ -9,29 +9,45 @@
     "preview": "vite preview",
     "lint:all": "npm run lint:code; npm run lint:styles;",
     "lint:all:fix": "npm run lint:code:fix; lint:styles:fix; npm run lint:format;",
-    "lint:format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "lint:format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc.js",
     "lint:code": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:code:fix": "eslint --fix",
     "lint:styles": "stylelint src",
     "lint:styles:fix": "npm run lint:styles -- --fix"
   },
   "dependencies": {
+    "@gravity-ui/i18n": "^1.1.0",
+    "compose-function": "^3.0.3",
     "i18nano": "^4.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax": "^3.5.1",
+    "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.3",
+    "@gravity-ui/components": "^2.5.1",
+    "@gravity-ui/date-components": "^1.0.0",
+    "@gravity-ui/dynamic-forms": "^2.8.2",
+    "@gravity-ui/eslint-config": "^3.1.1",
+    "@gravity-ui/icons": "^2.6.0",
+    "@gravity-ui/prettier-config": "^1.1.0",
+    "@gravity-ui/stylelint-config": "^4.0.0",
+    "@gravity-ui/tsconfig": "^1.0.0",
+    "@gravity-ui/uikit": "^5.17.0",
+    "@types/compose-function": "^0.0.31",
+    "@types/node": "^20.8.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-autofix": "^1.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -39,11 +55,18 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
     "stylelint-config-clean-order": "^5.2.0",
     "stylelint-config-standard": "^34.0.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.5"
+  },
+  "aliases": {
+    "@": "./src",
+    "@assets": "./src/assets",
+    "@components": "./src/shared/components"
   }
 }
