--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "lint:styles:fix": "npm run lint:styles -- --fix"
   },
   "dependencies": {
+    "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1",
     "react-parallax": "^3.5.1",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0"
